--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,3 +17,7 @@ once_cell = { version = "1.19.0" }
 bytes = { version = "1.5.0" }
 futures = { version = "0.3.30" }
 chrono = { version = "0.4.31" }
+#console-subscriber = { version = "0.2.0" }
+
+[build]
+rustflags = ["--cfg", "tokio_unstable"]
